--- a/nextmit-workspace/nextmit-admin/package.json
+++ b/nextmit-workspace/nextmit-admin/package.json
@@ -13,17 +13,19 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.4",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-table": "^8.10.7",
     "@types/js-cookie": "^3.0.6",
-    "axios": "^1.6.2",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
+    "framer-motion": "^11.15.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.294.0",
     "next": "^14.0.3",
@@ -33,7 +35,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "recharts": "^2.10.3",
-    "tailwind-merge": "^2.5.5",
+    "shadcn-ui": "^0.9.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
