--- a/nextmit-workspace/EventChat-Admin/app.json
+++ b/nextmit-workspace/EventChat-Admin/app.json
@@ -19,10 +19,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.faust55f.EventChatAdmin"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "a7a7502f-ba20-4bfb-bff1-616023899f06"
+      }
     }
   }
 }
