--- a/nextmit-workspace/EventChat-Admin/package.json
+++ b/nextmit-workspace/EventChat-Admin/package.json
@@ -9,32 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.2.0",
-    "@shopify/restyle": "^2.4.4",
-    "@tanstack/react-query": "^5.62.10",
-    "axios": "^1.7.9",
-    "eventchat-admin": "file:",
-    "expo": "~52.0.23",
-    "expo-linear-gradient": "^14.0.1",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.5",
-    "react-native-gesture-handler": "^2.21.2",
-    "react-native-reanimated": "^3.16.6",
-    "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.4.0",
-    "zustand": "^5.0.2"
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@shopify/restyle": "^2.4.2",
+    "expo": "^52.0.23",
+    "expo-image-picker": "~16.0.3",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.72.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "^15.10.1",
+    "react-native-svg-web": "^1.0.9",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/runtime": "^7.26.0",
-    "@types/react": "~18.3.12",
-    "@types/react-native": "^0.73.0",
-    "typescript": "^5.7.2"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.14",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
